--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -112,6 +112,10 @@ a:not(.btn) {
 	ul {
 		font-size: 1.8rem;
 	}
+
+  .third {
+    color: $gray4;
+  }
 }
 
 .center {
